fix: update data

--- a/locale/ja/crystal-website/_data/opencollective.json
+++ b/locale/ja/crystal-website/_data/opencollective.json
@@ -1,40 +1,117 @@
 [
   {
-    "name": "Artem Napolskih",
+    "name": "Randy Diaz",
     "this_month": 5.0,
     "all_time": 5.0,
+    "since": "Aug 7, 2020"
+  },
+  {
+    "name": "Matt Berry",
+    "url": "https://mattrb.com",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Aug 7, 2020"
+  },
+  {
+    "name": "Andrew Lewman",
+    "url": "https://lewman.com",
+    "logo": "sponsors/andrew_lewman.jpg",
+    "this_month": 150.0,
+    "all_time": 150.0,
+    "since": "Aug 6, 2020"
+  },
+  {
+    "name": "Gabriel Sales Seixas",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jul 30, 2020"
+  },
+  {
+    "name": "vinit joshi",
+    "this_month": 5.0,
+    "all_time": 10.0,
+    "since": "Jul 14, 2020"
+  },
+  {
+    "name": "Andra Antariksa Prihadi",
+    "this_month": 1.0,
+    "all_time": 1.0,
+    "since": "Jul 5, 2020"
+  },
+  {
+    "name": "Andrea Manzini",
+    "this_month": 10.0,
+    "all_time": 10.0,
+    "since": "Jun 18, 2020"
+  },
+  {
+    "name": "Guoliang Cao",
+    "this_month": 15.0,
+    "all_time": 15.0,
+    "since": "Jun 14, 2020"
+  },
+  {
+    "name": "Aanand Natarajan",
+    "this_month": 5.0,
+    "all_time": 5.0,
+    "since": "Jun 12, 2020"
+  },
+  {
+    "name": "Nobuaki Tanaka",
+    "url": "https://twitter.com/tomerun",
+    "this_month": 5.0,
+    "all_time": 15.0,
+    "since": "Jun 10, 2020"
+  },
+  {
+    "name": "Oleksii Neishchenko",
+    "this_month": 5.0,
+    "all_time": 15.0,
+    "since": "Jun 9, 2020"
+  },
+  {
+    "name": "DocSpring",
+    "url": "https://docspring.com",
+    "logo": "sponsors/docspring.png",
+    "this_month": 75.0,
+    "all_time": 225.0,
+    "since": "Jun 1, 2020"
+  },
+  {
+    "name": "NekoIT",
+    "url": "https://nekoit.xyz",
+    "this_month": 10.0,
+    "all_time": 30.0,
+    "since": "May 31, 2020"
+  },
+  {
+    "name": "Luan Dias",
+    "this_month": 1.0,
+    "all_time": 3.0,
+    "since": "May 28, 2020"
+  },
+  {
+    "name": "Artem Napolskih",
+    "this_month": 5.0,
+    "all_time": 15.0,
     "since": "May 22, 2020"
   },
   {
     "name": "Kevin Sjöberg",
     "this_month": 25.0,
-    "all_time": 25.0,
+    "all_time": 75.0,
     "since": "May 22, 2020"
-  },
-  {
-    "name": "Crescer",
-    "url": "https://crescer.net",
-    "this_month": 10.0,
-    "all_time": 10.0,
-    "since": "May 10, 2020"
-  },
-  {
-    "name": "Rodrigo Pereira de Mendonça",
-    "url": "https://crescer.net",
-    "this_month": 10.0,
-    "all_time": 10.0,
-    "since": "May 9, 2020"
   },
   {
     "name": "Glen Aultman-Bettridge",
     "this_month": 5.0,
-    "all_time": 5.0,
+    "all_time": 20.0,
     "since": "May 5, 2020"
   },
   {
     "name": "Szymon Madeja",
     "this_month": 5.0,
-    "all_time": 5.0,
+    "all_time": 20.0,
     "since": "May 5, 2020"
   },
   {
@@ -47,7 +124,7 @@
     "name": "Kagi",
     "url": "https://kagi.com",
     "this_month": 25.0,
-    "all_time": 50.0,
+    "all_time": 125.0,
     "since": "Apr 8, 2020"
   },
   {
@@ -59,7 +136,7 @@
   {
     "name": "Darwin",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 25.0,
     "since": "Apr 5, 2020"
   },
   {
@@ -72,7 +149,7 @@
     "name": "Hotmagma",
     "url": "https://sinulaen.ee",
     "this_month": 5.0,
-    "all_time": 10.0,
+    "all_time": 25.0,
     "since": "Mar 16, 2020"
   },
   {
@@ -84,29 +161,22 @@
   {
     "name": "Kasper Holbek Jensen",
     "this_month": 5.0,
-    "all_time": 15.0,
+    "all_time": 30.0,
     "since": "Mar 11, 2020"
   },
   {
     "name": "Braydon Kains",
     "url": "https://github.com/BKains",
     "this_month": 5.0,
-    "all_time": 15.0,
+    "all_time": 30.0,
     "since": "Mar 8, 2020"
   },
   {
     "name": "RemoteTeam.com",
     "url": "https://www.remoteteam.com",
     "this_month": 5.0,
-    "all_time": 15.0,
+    "all_time": 30.0,
     "since": "Feb 29, 2020"
-  },
-  {
-    "name": "Digital Bank Guide",
-    "url": "https://digitalbankguide.com",
-    "this_month": 5.0,
-    "all_time": 20.0,
-    "since": "Jan 29, 2020"
   },
   {
     "name": "Julien Elbaz",
@@ -123,35 +193,28 @@
     "since": "Dec 19, 2019"
   },
   {
-    "name": "Shield My IP",
-    "url": "https://shieldmyip.com",
-    "this_month": 5.0,
-    "all_time": 35.0,
-    "since": "Nov 10, 2019"
-  },
-  {
     "name": "Wesley Moore",
     "this_month": 5.0,
-    "all_time": 35.0,
+    "all_time": 50.0,
     "since": "Nov 4, 2019"
   },
   {
     "name": "Jonathan Gnagy",
-    "this_month": 5.0,
-    "all_time": 35.0,
+    "this_month": 1.0,
+    "all_time": 46.0,
     "since": "Oct 31, 2019"
   },
   {
     "name": "Raels Koder",
     "this_month": 25.0,
-    "all_time": 175.0,
+    "all_time": 250.0,
     "since": "Oct 30, 2019"
   },
   {
     "name": "Patric Vormstein",
     "url": "https://github.com/pvormste",
     "this_month": 5.0,
-    "all_time": 35.0,
+    "all_time": 50.0,
     "since": "Oct 25, 2019"
   },
   {
@@ -165,14 +228,8 @@
     "name": "Ryan Prior",
     "url": "http://www.ryanprior.com",
     "this_month": 5.0,
-    "all_time": 40.0,
+    "all_time": 55.0,
     "since": "Oct 7, 2019"
-  },
-  {
-    "name": "Austin Vecchio",
-    "this_month": 5.0,
-    "all_time": 40.0,
-    "since": "Oct 4, 2019"
   },
   {
     "name": "Michael Lang",
@@ -191,21 +248,21 @@
     "name": "WPsetup",
     "url": "https://wpsetup.org",
     "this_month": 5.0,
-    "all_time": 45.0,
+    "all_time": 60.0,
     "since": "Sep 2, 2019"
   },
   {
     "name": "Level UP Solutions",
     "url": "https://www.levups.com",
     "this_month": 5.0,
-    "all_time": 45.0,
+    "all_time": 60.0,
     "since": "Sep 1, 2019"
   },
   {
     "name": "Max Fierke",
     "url": "https://www.maxfierke.com",
     "this_month": 10.0,
-    "all_time": 110.0,
+    "all_time": 140.0,
     "since": "Jul 21, 2019"
   },
   {
@@ -217,7 +274,7 @@
   {
     "name": "Bernardo Anderson",
     "this_month": 2.0,
-    "all_time": 24.0,
+    "all_time": 30.0,
     "since": "Jun 1, 2019"
   },
   {
@@ -231,7 +288,7 @@
     "name": "George Protacio-Karaszi",
     "url": "http://hellogeorge.io",
     "this_month": 10.0,
-    "all_time": 170.0,
+    "all_time": 200.0,
     "since": "Feb 6, 2019"
   },
   {
@@ -271,7 +328,7 @@
     "name": "Julien Reichardt",
     "url": "https://github.com/j8r",
     "this_month": 25.0,
-    "all_time": 450.0,
+    "all_time": 525.0,
     "since": "Dec 13, 2018"
   },
   {
@@ -279,7 +336,7 @@
     "url": "https://www.blitline.com",
     "logo": "sponsors/blitline.png",
     "this_month": 75.0,
-    "all_time": 1350.0,
+    "all_time": 1575.0,
     "since": "Dec 12, 2018"
   }
 ]
