feat(website): translate Shards 0.12.0 release note

--- a/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-09-crystal-0.35.0-released.md
@@ -1,6 +1,6 @@
 ---
 title: Crystal 0.35.0がリリースされました！
-summary: Crystal は新しい開発リリースをしました。
+summary: Crystal は新バージョンのリリースをしました。
 thumbnail: +
 
 author: bcardiff,makenowjust
