--- a/locale/ja/crystal-website/_posts/2020-06-19-crystal-0.35.1-released.md
+++ b/locale/ja/crystal-website/_posts/2020-06-19-crystal-0.35.1-released.md
@@ -1,6 +1,6 @@
 ---
 title: Crystal 0.35.1がリリースされました！
-summary: Crystal は新しい開発リリースをしました。
+summary: Crystal は新バージョンのリリースをしました。
 thumbnail: +
 
 author: bcardiff,makenowjust
