fix(website): update some sentence

--- a/locale/ja/crystal-website/_posts/2020-08-06-shards-0.12.0-released.md
+++ b/locale/ja/crystal-website/_posts/2020-08-06-shards-0.12.0-released.md
@@ -28,7 +28,7 @@ author: bcardiff,makenowjust
 
 ローカルでのオーバーライド機能は `shard.override.yml` ファイルを用意するか、`SHARDS_OVERRIDE` 環境変数で指定したファイルを用意することで有効になります。もし依存関係がオーバーライドファイルに載っていた場合、その他の依存関係のグラフの状態に関わらず、そのバージョンが使われることになります。
 
-上記のロジックによって、次の2つの場合のワークフローが単純化されます。
+上記のロジックによって、次の場合のワークフローが単純化されるでしょう。
 
 * ある shard の開発者が、新バージョンをリリースして使えるようにする代わりに、手元の開発版のコピーを使いたいとき。
 * 中間の依存関係が新しいバージョンの依存関係と衝突しているのを回避したいとき。
